tests/testdata/errors/continue_outside_loop.pine
//@version=5
indicator("errors/continue_outside_loop")
// Test continue outside loop - should fail

var x = 10
continue

// Expected error:
// error [break-outside-loop]: `continue` is only valid inside a loop
